--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                     <div class="text55">
                         <p class="why_alivio"> Why Alivio</p>
                         <p>Solutions</p>
+                        <p class="Community">Community</p>
                         <p class="pricing">Pricing</p>
                     </div>
             </div>
